# EpsiFrag

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/arch/: Graphics_vulkan_pipeline_excal.excalidraw
include/: candy_imgui.h  core.h
math/: quant.typ
src/: candy_imgui.cpp  game.cpp  main.cpp  quant.cpp
src/shaders/: compile_shaders.sh  simple_shader.vert  simple_shader.vert.spv
src/shaders/bak/: simpple_shade.frag.bak
src/shaders/compute/: first_half_kin.comp.spv  first_half_kin.compute  full_potential.comp  full_potential.comp.spv  last_half_kin.comp  visualize.comp  visualize.comp.spv
